2003-01-24  Per Bothner  <per@bothner.com>

	* NamespaceResolver.java (beginAttribute):  Fix off-by-one error
	reported 1/22 by Robert Yokota <ryokota@modeln.com>.

2003-01-09  Per Bothner  <per@bothner.com>

	* NamedChildrenFilter.java:  Update for gnu.lists changes.
	* NamespaceResolver.java:  Likewise.
	* XMLPrinter.java:  Likewise.
	
	* XMLPrinter.java (<init>):  Add 5 new constructors.
	(setStyle):  New method.
	(make):  Use setStyle.

2003-01-05  Per Bothner  <per@bothner.com>

	* XPath.java:  Removed - superceded more-or-less by XQuery.
	* XPathConstants.java:  Likewise.
	* XPathContext.java:  Likewise.
	* XPathFunction.java:  Likewise.
	* XPathParser.java:  Likewise.
	* XPathVariable.java:  Likewise.
	* Makefile.am:  Update acordingly.

2002-11-16  Per Bothner  <per@bothner.com>

	* QName.java.in:  Removed - now uses gnu.mapping.Symbol.
	* Makefile.am, NamedChildrenFilter.java, NamespaceResolver.java:
	Update accordingly.

2002-07-25  Per Bothner  <per@bothner.com>

	* NamedChildrenFilter.java (writeObject):  Check if val is Consumable.

2002-07-02  Per Bothner  <per@bothner.com>

	* XMLPrinter.java:  Replace all calls of writeRaw to super.write.
	This avoids a JDK1.1 problem with super.out not being accessible.
	(writeRaw):  Remove no-longer-used methods.

2002-06-26  Per Bothner  <per@bothner.com>

	* XMLParser.java.in (parse):  Fix setting of 'start' after 'fill'.

2002-06-24  Per Bothner  <per@bothner.com>

	* Makefile.am:  Renamed generated XMLParser class to XMLParserChar.

	* ParsedXMLToConsumer.java (parse):  Remove static helper method.
	Replaced by new Document.parse methods.

2002-06-19  Per Bothner  <per@bothner.com>

	* XMLParser.java.in:  Set up for more useful inheritance.
	(buffer, pos, limit, in):  Make protected.
	(parse):  Initiaze start safely even if buffer is null.
	(error):  Take extra serverity parameter.
	(parse):  Chaneg calls to error apropriately.
	(fill):  Handle copying saved data here, rather than in parse.